[package]
name = "chernogoria"
version = "0.1.0"
authors = ["Sergei Radutnuy <sergeiradutnuy01@gmail.com>"]

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
docopt = "1.0"
futures = "0.1"
hyper = "0.12"
hyper-tls = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.6"
